--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.2",
     "bootstrap-icons": "^1.5.0",
     "rxjs": "~6.6.0",
