--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,9 @@
               "node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.js"
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/@types/bootstrap/js/dist/dropdown.d.ts",
+              "node_modules/@types/bootstrap/js/dist/popover.d.ts"
             ]
           },
           "configurations": {
