--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@types/bootstrap": "^5.1.6",
     "bootstrap": "^5.1.2",
     "bootstrap-icons": "^1.5.0",
     "rxjs": "~6.6.0",
