--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.5",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.1.5",
     "@angular/compiler": "~10.1.5",
     "@angular/core": "~10.1.5",
@@ -23,6 +24,8 @@
     "@types/bootstrap": "^5.1.6",
     "bootstrap": "^5.1.2",
     "bootstrap-icons": "^1.5.0",
+    "image-to-base64": "^2.2.0",
+    "ng2-select2": "^1.0.0-beta.16",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
