--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@angular/service-worker": "~10.1.5",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@types/bootstrap": "^5.1.6",
     "bootstrap": "^5.1.2",
