--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@types/bootstrap": "^5.1.6",
     "bootstrap": "^5.1.2",
     "bootstrap-icons": "^1.5.0",
+    "express": "^4.17.2",
     "image-to-base64": "^2.2.0",
     "ng2-select2": "^1.0.0-beta.16",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -35,9 +37,9 @@
     "@angular-devkit/build-angular": "~0.1001.5",
     "@angular/cli": "~10.1.5",
     "@angular/compiler-cli": "~10.1.5",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
